[package]
name = "iconf"
version = "0.1.1"
edition = "2021"
authors = ["PMC <pandamancoin@gmail.com>"]
rust-version = "1.74"
description = "toml 配置文件读取"
documentation = "https://github.com/PandaManPMC/iconf.git"
readme = "README.md"
repository = "https://github.com/PandaManPMC/iconf.git"
license = "MIT OR Apache-2.0"

[dependencies]
toml = "0.8.12"
